[package]
name = "hexagonal-adapter-nats"
version = "0.3.0"
edition = "2021"
authors = ["the.yaml.life"]
license = "MIT"
description = "NATS JetStream adapter for hexagonal architecture - Event-driven messaging with CloudEvents support"
repository = "https://github.com/the-yaml-life/hexagonal-adapter-nats"
keywords = ["hexagonal", "nats", "jetstream", "messaging", "cloudevents"]
categories = ["asynchronous", "network-programming"]

[dependencies]
# Core hexagonal dependencies
hexagonal-core = { path = "../../core", version = "0.3.0" }
hexagonal-ports-messaging = { path = "../../ports/messaging", version = "0.3.0", features = ["cloudevents"] }

# NATS dependencies
async-nats = "0.33"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

[features]
default = ["jetstream"]
jetstream = []
outbox = []
